discussion/kv_engine/181924/181924_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

AuditDescriptorManager::lookup return reference

All events we use in the system should be registered at
build time. We do allow "clients" to submit audit events,
but only from processes with the audit privilege which
is only granted to processes which is part of the TCB.

Change-Id: Ic9bcd7d86949c17b1dcd78af6187a55c7cc35c4f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 09:51:31.000000000
Message: 
Uploaded patch set 5: New patch set was added with same tree, parent, and commit message as Patch Set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 10:04:07.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50761/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50761/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23000/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23000/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11359/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11359/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/270/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/270/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11268/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11268/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23980/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23980/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23571/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23571/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24811/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24811/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31996/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31996/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21539/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:284:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21539/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21539/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42604/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42604/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20811/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
